Migrate to Django 1.11: FAILED (failures=6, errors=98, skipped=29)

--- a/anytask/templates/base.html
+++ b/anytask/templates/base.html
@@ -709,7 +709,7 @@
                                             <a class="dropdown-item" href="{% url "admin:index" %}">{% trans "adminka" %}</a>
                                         {% endif %}
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="{% url "django.contrib.auth.views.password_change" %}">{% trans "smenit_parol" %}</a>
+                                        <a class="dropdown-item" href="{% url "auth_password_change" %}">{% trans "smenit_parol" %}</a>
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="{% url "django.contrib.auth.views.logout" %}">{% trans "vyjti" %}</a>
                                     </div>
